added exceptionhandling